# swagger_server/controllers/transactions_controller.py
@@ -1,16 +1,19 @@
 from swagger_server.services.transactions import Transactions
 from http_exceptions import BadRequestException, UnauthorizedException, HTTPException
+from swagger_server.models.error_response import ErrorResponse
 
 
-def transaction_analyses_get():  # noqa: E501
+def transaction_analyses_get(category=None):  # noqa: E501
     try:
+        if category:
+            category = str(category).split(',')
         transaction_services = Transactions()
-        return transaction_services.calculate_average_spending()
+        return transaction_services.calculate_average_spending(category)
     except UnauthorizedException as ex:
-        pass
+        return ErrorResponse(details=ex.message), 403
     except BadRequestException as ex:
-        pass
+        return ErrorResponse(details=ex.message), 400
     except HTTPException as ex:
-        pass
+        return ErrorResponse(details=ex.message), 503
     except Exception as ex:
-        pass
+        return ErrorResponse(details=str(ex)), 500
