# swagger_server/services/transactions.py
@@ -7,8 +7,12 @@ class Transactions:
     def calculate_average_spending(self, category=None):
         transactions = self._load_data_from_api(category)
         transactions = BasiqTransaction.to_dataframe(transactions)
-        mean_transactions = transactions.groupby('category').mean().to_dict()['amount']
-        return [TransactionAnalyses(category=k, average_spending=v) for k, v in mean_transactions.items()]
+        mean_transactions = transactions.groupby(['category', 'description'])['amount'].mean()
+        return [TransactionAnalyses(
+            category=k[0],
+            average_spending=v,
+            description=k[1]
+        ) for k, v in mean_transactions.items()]
 
     @classmethod
     def _load_data_from_api(cls, category):
@@ -18,9 +22,9 @@ class Transactions:
         while True:
             basiq_transactions, next_id = api_repo.get_transactions(next_id)
             if category:
-                if isinstance(category, str):
-                    category = [category]
-                basiq_transactions = list(filter(lambda x: x.subClass.code in category, basiq_transactions))
+                basiq_transactions = list(filter(lambda x: ('0' in category and x.subClass is None) or
+                                                           (x.subClass is not None and x.subClass['code'] in category),
+                                                 basiq_transactions))
             transactions.extend(basiq_transactions)
             if not next_id:
                 break
